--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="check_panel_width">400dp</dimen>
-    <dimen name="buttons_panel_width">80dp</dimen>
-    <dimen name="calculator_button">100dp</dimen>
+    <dimen name="linear_layout_cheque_panel_width">400dp</dimen>
+    <dimen name="linear_layout_main_buttons_width">80dp</dimen>
 </resources>
