--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
-    <dimen name="total_panel_text_size">20sp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="text_big_size">25sp</dimen>
+    <dimen name="space_between_columns">2dp</dimen>
 </resources>
