--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,37 +1,31 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">#388E3C</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="check_text_style">
-        <item name="android:textSize">15sp</item>
+    <style name="cheque_text_view_style">
         <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/text_size</item>
     </style>
 
-    <style name="name_check" parent="check_text_style">
-        <item name="android:background">#C8E6C9</item>
-        <item name="android:paddingLeft">2dp</item>
+    <style name="text_view_dish_name_style" parent="cheque_text_view_style">
+        <item name="android:background">@color/cheque_first_column</item>
+        <item name="android:paddingLeft">@dimen/space_between_columns</item>
         <item name="android:gravity">left</item>
     </style>
 
-    <style name="amount_check" parent="check_text_style">
-        <item name="android:background">#C8E6C9</item>
-        <item name="android:layout_marginLeft">1dp</item>
+    <style name="text_view_one_dish_price_style" parent="cheque_text_view_style">
+        <item name="android:background">@color/cheque_second_column</item>
+        <item name="android:layout_marginLeft">@dimen/space_between_columns</item>
     </style>
 
-    <style name="summ_per_el_check" parent="check_text_style">
-        <item name="android:background">#C8E6C9</item>
-        <item name="android:layout_marginLeft">1dp</item>
+    <style name="text_view_total_dish_price_style" parent="cheque_text_view_style">
+        <item name="android:background">@color/cheque_third_column</item>
+        <item name="android:layout_marginLeft">@dimen/space_between_columns</item>
     </style>
 
-    <style name="total_summ" parent="check_text_style">
-        <item name="android:background">#C8E6C9</item>
-        <item name="android:layout_marginLeft">1dp</item>
+    <style name="grid_view_products">
+        <item name="android:numColumns">5</item>
     </style>
 </resources>
