--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/cheque_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cheque_item_background"
-    android:orientation="horizontal"
-    android:padding="2dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/text_view_dish_name"
-        style="@style/text_view_dish_name_style"
+        style="@style/cheque_text_view_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:layout_weight="1"
+        android:gravity="left"
+        android:paddingLeft="20dp"
         android:text="@string/dish_name" />
 
     <TextView
         android:id="@+id/text_view_one_dish_price"
-        style="@style/text_view_one_dish_price_style"
+        style="@style/cheque_text_view_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
@@ -24,7 +26,7 @@
 
     <TextView
         android:id="@+id/text_view_total_dish_price"
-        style="@style/text_view_total_dish_price_style"
+        style="@style/cheque_text_view_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
