--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="cheque_background">#3F51B5</color>
-    <color name="cheque_first_column">#C8E6C9</color>
-    <color name="cheque_second_column">#C8E6C9</color>
-    <color name="cheque_third_column">#C8E6C9</color>
-    <color name="cheque_item_background">#f1c40f</color>
-    <color name="cheque_total_string_background">#ecf0f1</color>
+    <color name="cheque_background">#424242</color>
+    <color name="dark_text">#000000</color>
+    <color name="light_text">#FFFFFF</color>
+    <color name="cheque_first_column">#8A79DD</color>
+    <color name="cheque_second_column">#8A79DD</color>
+    <color name="cheque_third_column">#8A79DD</color>
+    <color name="cheque_item_background">#EEEEEE</color>
+    <color name="cheque_total_string_background">#212121</color>
     <color name="main_buttons_background">#3F51B5</color>
     <color name="products_list_background">#ecf0f1</color>
     <color name="button_product_background">#f1c40f</color>
     <color name="button_product_text">#3F51B5</color>
-    <color name="list_view_all_menues"></color>
-    <color name="list_view_menu_items"></color>
-    <color name="list_view_items_available"></color>
+    <color name="list_view_all_menues">#C8E6C9</color>
+    <color name="list_view_menu_items">#3F51B5</color>
+    <color name="list_view_items_available">#C8E6C9</color>
+    <color name="header_menu">#FFF123</color>
 </resources>
