--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -62,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/big_button"
             android:text="@string/accept_button_text" />
 
         <Button
@@ -69,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/big_button"
             android:text="@string/cancel_button_text" />
     </LinearLayout>
 
@@ -85,18 +86,21 @@
             android:id="@+id/grid_view_products"
             style="@style/grid_view_products"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></GridView>
+            android:layout_height="match_parent"
+            android:horizontalSpacing="@dimen/space_between_columns_hor"
+            android:verticalSpacing="@dimen/space_between_columns_vert"></GridView>
 
-        <android.support.design.widget.FloatingActionButton
+        <ImageButton
             android:id="@+id/button_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/round_button_size"
+            android:layout_height="@dimen/round_button_size"
             android:layout_alignBottom="@id/grid_view_products"
             android:layout_alignRight="@id/grid_view_products"
             android:layout_gravity="end"
             android:layout_margin="15dp"
-            android:src="@android:drawable/ic_menu_edit"
-            app:fabSize="normal" />
+            android:background="@drawable/basket_edit"
+            android:scaleType="center"
+            android:src="@drawable/round_button" />
 
     </RelativeLayout>
 </RelativeLayout>
