--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -9,35 +8,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/list_view_all_menues"
+        android:background="@color/cheque_background"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view_all_menus"
+            style="@style/header_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:background="@color/header_menu"
             android:gravity="center"
-            android:text="@string/all_menus"
-            android:textSize="@dimen/text_big_size" />
+            android:text="@string/all_menus" />
 
         <ListView
             android:id="@+id/list_view_all_menus"
+            style="@style/all_menus_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/text_view_all_menus"></ListView>
+            android:layout_below="@id/text_view_all_menus"
+            android:listSelector="@android:color/darker_gray"></ListView>
 
-        <android.support.design.widget.FloatingActionButton
+        <ImageButton
             android:id="@+id/button_add_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/round_button_size"
+            android:layout_height="@dimen/round_button_size"
             android:layout_alignBottom="@id/list_view_all_menus"
             android:layout_alignRight="@id/list_view_all_menus"
             android:layout_gravity="end"
             android:layout_margin="15dp"
-            android:src="@android:drawable/ic_input_add"
-            app:fabSize="normal" />
+            android:background="@drawable/basket_add"
+            android:scaleType="center"
+            android:src="@drawable/round_button" />
 
     </RelativeLayout>
 
@@ -45,35 +46,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/list_view_menu_items"
+        android:background="@color/list_view_items_available"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view_menu_items"
+            style="@style/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:background="@color/header_menu"
-            android:gravity="center"
             android:text="@string/products_in_selected_menu"
             android:textSize="@dimen/text_big_size" />
 
         <ListView
             android:id="@+id/list_view_menu_items"
+            style="@style/menu_products_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/text_view_menu_items"></ListView>
 
-        <android.support.design.widget.FloatingActionButton
+        <ImageButton
             android:id="@+id/button_apply_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/round_button_size"
+            android:layout_height="@dimen/round_button_size"
             android:layout_alignBottom="@id/list_view_menu_items"
             android:layout_alignRight="@id/list_view_menu_items"
             android:layout_gravity="end"
             android:layout_margin="15dp"
-            android:src="@android:drawable/ic_menu_set_as"
-            app:fabSize="normal" />
+            android:background="@drawable/accept"
+            android:scaleType="center"
+            android:src="@drawable/round_button" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -85,29 +87,29 @@
 
         <TextView
             android:id="@+id/text_view_all_products"
+            style="@style/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:background="@color/header_menu"
-            android:gravity="center"
-            android:text="@string/all_available_products"
-            android:textSize="@dimen/text_big_size" />
+            android:text="@string/all_available_products" />
 
         <ListView
             android:id="@+id/list_view_items_available"
+            style="@style/all_products_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/text_view_all_products"></ListView>
 
-        <android.support.design.widget.FloatingActionButton
+        <ImageButton
             android:id="@+id/button_add_product"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/round_button_size"
+            android:layout_height="@dimen/round_button_size"
             android:layout_alignBottom="@id/list_view_items_available"
             android:layout_alignRight="@id/list_view_items_available"
             android:layout_gravity="end"
             android:layout_margin="15dp"
-            android:src="@android:drawable/ic_input_add"
-            app:fabSize="normal" />
+            android:background="@drawable/add"
+            android:scaleType="center"
+            android:src="@drawable/round_button" />
     </RelativeLayout>
 </LinearLayout>
