--- a/app/src/main/res/layout/available_product.xml
+++ b/app/src/main/res/layout/available_product.xml
@@ -2,17 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/product_menu_button"
     android:orientation="horizontal">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="15"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="10"
         android:adjustViewBounds="true"
-        android:src="@drawable/move" />
+        android:src="@drawable/move2" />
 
     <TextView
         android:id="@+id/text_view_dish_name"
+        style="@style/product_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
