--- a/app/src/main/res/layout/menus_list.xml
+++ b/app/src/main/res/layout/menus_list.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/menu_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/text_view_menu_name"
+        style="@style/all_menues_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
