--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="text_size">18sp</dimen>
     <dimen name="text_big_size">25sp</dimen>
-    <dimen name="space_between_columns">2dp</dimen>
+    <dimen name="space_between_columns_vert">15dp</dimen>
+    <dimen name="space_between_columns_hor">15dp</dimen>
+    <dimen name="space_between_rows">5dp</dimen>
+    <dimen name="round_button_size">70dp</dimen>
 </resources>
