--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -58,24 +58,22 @@
             android:text="@string/products_in_selected_menu"
             android:textSize="@dimen/text_big_size" />
 
+        <Button
+            android:id="@+id/button_apply_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/apply_button"
+            android:text="@string/apply_menu"
+            android:textAppearance="@style/product_item" />
         <ListView
             android:id="@+id/list_view_menu_items"
             style="@style/menu_products_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@id/button_apply_menu"
             android:layout_below="@id/text_view_menu_items"></ListView>
 
-        <ImageButton
-            android:id="@+id/button_apply_menu"
-            android:layout_width="@dimen/round_button_size"
-            android:layout_height="@dimen/round_button_size"
-            android:layout_alignBottom="@id/list_view_menu_items"
-            android:layout_alignRight="@id/list_view_menu_items"
-            android:layout_gravity="end"
-            android:layout_margin="15dp"
-            android:background="@drawable/accept"
-            android:scaleType="center"
-            android:src="@drawable/round_button" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -93,23 +91,22 @@
             android:layout_alignParentTop="true"
             android:text="@string/all_available_products" />
 
+        <Button
+            android:id="@+id/button_add_product"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/apply_button"
+            android:text="@string/add_new_product"
+            android:textAppearance="@style/product_item" />
+
         <ListView
             android:id="@+id/list_view_items_available"
             style="@style/all_products_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@id/button_add_product"
             android:layout_below="@+id/text_view_all_products"></ListView>
 
-        <ImageButton
-            android:id="@+id/button_add_product"
-            android:layout_width="@dimen/round_button_size"
-            android:layout_height="@dimen/round_button_size"
-            android:layout_alignBottom="@id/list_view_items_available"
-            android:layout_alignRight="@id/list_view_items_available"
-            android:layout_gravity="end"
-            android:layout_margin="15dp"
-            android:background="@drawable/add"
-            android:scaleType="center"
-            android:src="@drawable/round_button" />
     </RelativeLayout>
 </LinearLayout>
